@@ -28,7 +28,8 @@ import thaumicenergistics.common.utils.ThELog;
 /**
  * <strong>Thaumic Energistics</strong>
  * <hr>
- * A bridge between Thaumcraft and Applied Energistics. Essentia storage management, transportation, and application.
+ * A bridge between Thaumcraft and Applied Energistics. Essentia storage
+ * management, transportation, and application.
  *
  * @author Nividica
  *
@@ -49,7 +50,7 @@ public class ThaumicEnergistics
 	/**
 	 * Current version of the mod.
 	 */
-	public static final String VERSION = "1.0.0.5-RV2"; // NOTE: don't forget to change the build.gradle file as well
+	public static final String VERSION = "1.0.0.6-RV2"; // NOTE: don't forget to change the build.gradle file as well
 
 	/**
 	 * Singleton instance
@@ -86,7 +87,8 @@ public class ThaumicEnergistics
 	};
 
 	/**
-	 * Gets what state/phase of loading that ThE has <strong>completed</strong>.<br>
+	 * Gets what state/phase of loading that ThE has <strong>completed</strong>.
+	 * <br>
 	 * NOINIT: PreInit has not yet been called<br>
 	 * PREINITIALIZATION: PreInit has finished.<br>
 	 * INITIALIZATION: Load has finished.<br>
